clean_folder/.metadata/.plugins/org.eclipse.cdt.ui/integration.build.log
12:50:45 **** Incremental Build of configuration Debug for project integration ****
make all 
make --no-print-directory pre-build
a9-linaro-pre-build-step
' '
make --no-print-directory main-build
'Building file: ../src/audio.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/audio.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -IC:/Users/dkeum/Desktop/clean_folder/design_1_wrapper/export/design_1_wrapper/sw/design_1_wrapper/standalone_ps7_cortexa9_0/bspinclude/include -MMD -MP -MF"src/audio.d" -MT"src/audio.o" -o "src/audio.o" "../src/audio.c"
In file included from ../src/audio.c:6:
../src/audio.h:81:29: error: 'XPAR_AUDIO_IP_CTRL_ZED_AUDIO_CTRL_0_BASEADDR' undeclared here (not in a function); did you mean 'XPAR_ZED_AUDIO_CTRL_0_BASEADDR'?
   81 |  I2S_DATA_RX_L_REG = 0x00 + XPAR_AUDIO_IP_CTRL_ZED_AUDIO_CTRL_0_BASEADDR,
      |                             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                             XPAR_ZED_AUDIO_CTRL_0_BASEADDR
make[1]: *** [src/subdir.mk:44: src/audio.o] Error 1
make: *** [makefile:34: all] Error 2

12:50:46 Build Finished (took 719ms)

